--- a/function.html
+++ b/function.html
@@ -17,7 +17,7 @@
         const div=(num1,num2)=>{
              return num1/num2;
         }
-        const sub=(num1,num2)=>{
+        const sub=()=>{
              let num1=parseInt(window.prompt("enter number 1"));
              let num2=parseInt(window.prompt("enter number 2"));
              var check=window.confirm("DO you want subtraction");
